# skillventory

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  compose.override.yaml  compose.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/workflows/: build-docker-image.yml  docker-image.yml  publish-docs.yml  testing.yml
app/: main.py
app/data/: crud.py  dependencies.py
app/database/: config.py
app/models/: models.py  schemas.py  type_aliases.py
app/routers/: places.py  skills.py
app/tests/: conftest.py  test_crud.py  test_skill_router.py
docs/: index.md
search/: search_index.json
skillventory/: main.py
skillventory/data/: crud.py  dependencies.py
skillventory/database/: config.py
skillventory/models/: models.py
skillventory/routers/: skills_ui.py  skills_v1.py
tests/: conftest.py  test_crud.py  test_skill_router.py
