[tool.poetry]
name = "personal-inventory"
version = "0.1.0"
description = "Originally a web app to use as a personal inventory. Now an API to use, create, and manage a personal inventory."
authors = [
    "Ulises Alexander Arguelles Monjaraz <ulises_alexander_am@proton.me>",
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
SQLAlchemy = "^2.0.19"
pydantic-settings = "^2.0.2"
pydantic = "^2.1.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
loguru = "^0.7.2"
mkdocs-material = "^9.5.1"
sqlmodel = "^0.0.14"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
mypy = "^1.4.1"
pytest = "^7.4.0"
httpx = "^0.24.1"
bandit = {extras = ["toml"], version = "^1.7.5"}
pytest-cov = "^4.1.0"
allure-pytest = "^2.13.2"
commitizen = "^3.10.0"
pre-commit = "^3.4.0"

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.ruff]
extend-exclude = ["tests"]
preview = true

[tool.ruff.lint]
select = [
       #Default rules
       "E4", "E7", "E9", # pycodestyle errors
       "F", # pyflakes
       #Non-default rules
       "C90", # mccabe (too complex)
       "N", # pep8-naming
       "UP", # pyupgrade
       "S", # flake8-bandit
       "B", # flake8-bugbear
       "A", # flake8-builtins
       "C4", # flake8-comprehensions
       "EM", # flake8-errmsg
       "ICN", # flake8-import-conventions
       "PT", # flake8-pytest-style
       "RET", # flake8-return
       "SIM", # flake8-simplify
       "TID", # flake8-tidy-imports
       "PL", # pylint
       "RUF" # ruff-specific-rules
       ]
ignore = []
# Preview rules
extend-select = [
              "PLC0415", # import-outside-top-level
              "PLC1901", # compare-to-empty-string
              "PLC2401", # non-ascii-name
              "PLC2403", # non-ascii-import-name
              "PLE0704", # misplaced-bare-raise
              "PLE1132", # repeated-keyword-argument
              "PLR0202", # no-classmethod-decorator
              "PLR0203", # no-staticmethod-decorator
              "PLR0904", # too-many-public-methods
              "PLR0916", # too-many-boolean-expressions
              "PLR0917", # too-many-positional
              "PLR1704", # redefined-argument-from-local
              "PLR1706", # and-or-ternary
              "PLR1733", # unnecessary-dict-index-lookup
              "PLR1736", # unnecessary-list-index-lookup
              "PLR6201", # literal-membership
              "PLR6301", # no-self-use
              "PLW1501", # bad-open-mode
              "PLW1514", # unspecified-encoding
              "PLW3201", # bad-dunder-method-name
              "FURB", # refurb
              "RUF017", # quadratic-list-summation
              "RUF018", # assignment-in-assert
              "RUF019", # unnecessary-key-check
              ]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs=["tests"]
